# HerramientasdeROS2

./: CMakeLists.txt  README.md  package.xml  rincon_charris_pkg  setup.py
launch/: play_euroc_rosbag.launch.py
