<?xml version="1.0"?>
<package format="3">
  <name>Rincon_Charris_pkg</name>
  <version>0.0.1</version>
  <description>Paquete ROS2 con rosbag y launch</description>
  <maintainer email="amilcar.rincon@example.com">amilcar rincon</maintainer>
  <license>Apache License 2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>launch</exec_depend>
</package>
